# Ecophil-Scraper-API

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/config/: config.py  logger.py  settings.py
app/data_processing/: dataframe.py
app/models/: scraper.py
app/schemas/: scraper.py
app/scraper/: driver.py  intercommerce_scraper.py  scraper.py  vbs_scraper.py
app/utils/: colors.py  directory.py  exceptions.py  pdf.py
app/utils/cache/: row_cache.py
