[project]
name = "ecophil-scraper-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "polars>=1.26.0",
    "pydantic-settings>=2.8.1",
    "pypdf2>=3.0.1",
    "pytest>=8.3.5",
    "selenium>=4.29.0",
    "uvicorn>=0.34.0",
]
